--- a/_layouts/cvitem.html
+++ b/_layouts/cvitem.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <link rel="stylesheet" type="text/css" href="/css/basic.css">
    <title>{{ page.title }}</title>
 </head>
 <body>
