Tweaked cvitem layout to display any additional notes

--- a/_layouts/cvitem.html
+++ b/_layouts/cvitem.html
@@ -8,9 +8,10 @@
 </head>
 <body>
  
-  <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}
+  <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
+  {{ page.notes }}
 
-  {{ content }}
+  {{ page.content }}
 
 </body>
 </html>
