Tweaked cvitem layout to display any additional notes

--- a/_layouts/cvitem.html
+++ b/_layouts/cvitem.html
@@ -9,8 +9,8 @@
 <body>
  
   <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
-  {{ page.notes }}
-
+  {{ page.notes }}.  
+  
   {{ page.content }}
 
 </body>
