Tweaked cvitem layout to display any additional notes

--- a/_layouts/cvitem.html
+++ b/_layouts/cvitem.html
@@ -9,9 +9,9 @@
 <body>
  
   <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
-  {{ page.notes }}.  
+  <p>{{ page.notes }}.</p>  
   
-  {{ page.content }}
+  <p>{{ page.content }}</p>
 
 </body>
 </html>
