--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <link rel="stylesheet" type="text/css" href="/css/basic.css">
+   <link rel="alternate" type="application/rss+xml" title="RSS Feed for gray.clhn.co" href="/rss.xml" />
    <title>{{ page.title }}</title>
 </head>
 <body>
