--- a/_layouts/cvitem.html
+++ b/_layouts/cvitem.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
- 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <link rel="stylesheet" type="text/css" href="/css/basic.css">
-   <title>{{ page.title }}</title>
-</head>
-<body>
- 
-  <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
-  <p>{{ page.notes }}.</p>  
-  
-  <p>{{ page.content }}</p>
+---
+layout: default
+---
 
-</body>
-</html>
+<a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
+<p>{{ page.notes }}.</p>  
+  
+<p>{{ page.content }}</p>
