--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
  
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <link rel="stylesheet" type="text/css" href="/css/basic.css">
-   <link rel="alternate" type="application/rss+xml" title="RSS Feed for gray.clhn.co" href="/rss.xml" />
-   <title>{{ page.title }}</title>
-</head>
+<html lang="en">
+
+{% include head.html %}
+
 <body>
- 
-  <h1>{{ page.title }}</h1>
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span3"></div>
+      <div class="span6">
+	<div class="page-header" align = "center">
+	  <h1>{{ page.title }} 
+	    {% if page.subtitle %}<br /><small>{{page.subtitle}}</small>{% endif %}
+	  </h1>
+	</div>
+	{{ content }}
+      </div>
+    </div>
+  </div> <!-- /container -->
 
-  {{ content }}
-  
+{% include footer.html %}
 
-  <footer>
-  <hr>
-  <!-- Creative commons license -->
-  <a rel="license"
-  href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative
-  Commons License" style="border-width:0"
-  src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>
-  Copyright Gray Calhoun
-  2012 <br />This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-  </footer>
 </body>
 </html>
