Tweaked display options

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 <body>
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span2"></div>
-      <div class="span8">
+      <div class="span{{ 12 | minus:page.span | divided_by:2}}"></div>
+      <div class="span{{ page.span }}">
 	<div class="page-header" align = "center">
 	  <h1>{{ page.title }} 
 	    {% if page.subtitle %}<br /><small>{{page.subtitle}}</small>{% endif %}
