--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -61,14 +61,13 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
+a:hover {outline: 0;}
+a:active {color: #0000ff; underline; outline: 0;}
+a:visited {color: #800080; underline; outline: 0;}
 a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-}
-a:hover,
-a:active {
-  outline: 0;
 }
 sub,
 sup {
