Reorganized directories and added a microblog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <div class="container-fluid">
-    <div class="row-fluid">
+  <div class="container">
+    <div class="row">
       <div class="span12">
         <div align="center">
 	  Copyright 2012, Gray Calhoun //
