--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,9 @@
 {% include head.html %}
 
 <body>
-  <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span{{ 12 | minus:page.span | divided_by:2}}"></div>
-      <div class="span{{ page.span }}">
+  <div class="container">
+    <div class="row">
+      <div class="span{{ page.span }} offset{{ 12 | minus:page.span | divided_by:2}}">
 	<div class="page-header" align = "center">
 	  <h1>{{ page.title }} 
 	    {% if page.subtitle %}<br /><small>{{page.subtitle}}</small>{% endif %}
