Tweaked tweet formatting

--- a/_layouts/tweet.html
+++ b/_layouts/tweet.html
@@ -5,5 +5,5 @@ span: 6
 ---
 
 <strong>{{ content }}</strong>  
-{{ page.date | date_to_string}}, tags: {{ page.tags | array_to_sentence_string }} 
+{{ page.date | date_to_string}} // tags: {{ page.tags | array_to_sentence_string }} 
 
