Tweaked language in references to rss feed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
         <div align="center">
 	  Copyright 2012, Gray Calhoun //
 	  <a href="/about.html">About this website</a> //
+	  <a href="/rss.xml">Site feed</a> //
 	  <a href="mailto:{% include main_email %}">Contact</a> //
 	  <a href="/">Home</a>
   </div></div></div></div>
