--- a/_layouts/handout.html
+++ b/_layouts/handout.html
@@ -5,6 +5,8 @@ span: 10
 
 {{ content }}
 
+{% unless page.nocc %}
+<hr>
 This <span xmlns:dct="http://purl.org/dc/terms/" 
 	   href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span> 
 is licensed under a 
@@ -14,4 +16,4 @@ is licensed under a
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
   <img alt="Creative Commons License" style="border-width:0"
        src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>
-
+{% endunless %}
