--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 span: 6
+permalink: /research/:year/:month/:day/:title
 ---
 
 <a href="{{ page.link }}">{{ page.title }}</a>.  {{ page.info }}  
