Tweaked configuration to fix bugs after reorganization

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="span12">
         <div align="center">
 	  Copyright 2012, Gray Calhoun //
-	  <a href="/about.html">About this website</a> //
+	  <a href="/about">About this website</a> //
 	  <a href="/rss.xml">Site feed</a> //
 	  <a href="mailto:{% include main_email %}">Contact</a> //
 	  <a href="/">Home</a>
