--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,14 @@
     <div class="row">
       <div class="span12">
         <div align="center">
-	  Copyright 2012, Gray Calhoun //
-	  <a href="/about">About this website</a> //
-	  <a href="/rss.xml">Site feed</a> //
-	  <a href="mailto:{% include main_email %}">Contact</a> //
-	  <a href="/blog">Blog</a> //
-	  <a href="/">Home</a>
+	  <p>
+	    <a href="/about">About</a> //
+	    <a href="/rss.xml">RSS feed</a> //
+	    <a href="mailto:{% include main_email %}">Contact</a> //
+	    <a href="/blog">Blog</a> //
+	    <a href="/">Home</a>
+	  </p>
+	  <p>Copyright © 2012–2013 Gray Calhoun</p>
   </div></div></div></div>
 </footer>
 
