--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,23 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="Gray Calhoun">
 
+    <!-- MathJax -->
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        TeX: {
+          equationNumbers: { autoNumber: "AMS" }
+        },
+        tex2jax: { 
+          inlineMath: [ ['$','$'], ['\\(','\\)'] ],
+          processEscapes: true
+        }
+      });
+    </script>
+    <script type="text/javascript"
+	    src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+    
+
     <!-- Le styles -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for gray.clhn.co" href="/rss.xml" />
