--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
- 
-<html lang="en">
-
-{% include head.html %}
-
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="span{{ page.span }} offset{{ 12 | minus:page.span | divided_by:2}}">
-	<div class="page-header" align = "center">
-	  <h1>{{ page.title }} 
-	    {% if page.subtitle %}<br /><small>{{page.subtitle}}</small>{% endif %}
-	  </h1>
-	</div>
+<html>
+  <head>
+    <meta charset='utf-8' />
+    <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <section>
+	<h1>{{ page.title }}</h1>
+	<hr>
 	{{ content }}
 	<hr>
-      </div>
+	<a href="{{ site.baseurl }}">Home</a>
+      </section>
     </div>
-  </div> <!-- /container -->
-
-{% include footer.html %}
-
-</body>
+  </body>
 </html>
