--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600);
 
 body {
-  font:16px/1.3 "Source Sans Pro", "DejaVu Sans", sans-serif;
+  font:16px "Source Sans Pro", "DejaVu Sans", sans-serif;
   font-weight:400;
 }
 
@@ -15,7 +15,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 24px;
 }
 
 h2 {
@@ -51,5 +51,5 @@ hr {
   border:0;
   background:#e5e5e5;
   height:1px;
-  margin:0 0 20px;
+  margin:0 0 16px;
 }
