--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ code, pre {
   font-family:"Source Code Pro", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", mono;
 }
 
+blockquote {
+  border-left:1.5px solid #F0F8FF;
+}
+
 section {
   padding-left: 1.5em;
   max-width: 75ex;
@@ -49,7 +53,7 @@ section {
 
 hr {
   border:0;
-  background:#e5e5e5;
-  height:1px;
+  background:#F0F8FF;
+  height:1.5px;
   margin:0 0 16px;
 }
