--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,8 @@ code, pre {
 }
 
 blockquote {
-  border-left:1.5px solid #888888;
+  padding-left: 1.5em;
+  border-left:3px solid #888888;
 }
 
 section {
@@ -54,6 +55,6 @@ section {
 hr {
   border:0;
   background:#888888;
-  height:1.5px;
+  height:1px;
   margin:0 0 16px;
 }
