--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ code, pre {
 pre, blockquote {
   margin-left: -1ex;
   padding-left: 1ex;
-  border-left:3px solid #003366;
+  border-left:3px solid #F0F8FF;
 }
 
 section {
@@ -55,7 +55,7 @@ section {
 
 hr {
   border:0;
-  background:#003366;
+  background:#F0F8FF;
   height:1px;
   margin:0 0 16px;
 }
