--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,9 @@ ul {
  padding-left:0;
 }
 
-/* ol { */
-/*  padding-left:0; */
-/* } */
+ol {
+ padding-left:0;
+}
 
 code, pre {
   font-family:"Source Code Pro", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", mono;
@@ -44,7 +44,7 @@ code, pre {
 
 pre, blockquote {
   padding-left: 1em;
-  border-left:3px solid #003366;
+  border-left:2px solid #003366;
 }
 
 section {
