--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>gray.clhn.co — {{ page.title }}</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
 	<hr>
 	{{ content }}
 	<hr>
-	<a href="{{ site.baseurl }}">Home</a>
+	<a href="/">Home</a>
       </section>
     </div>
   </body>
