--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <link rel="stylesheet" href="/css/styles.css">
-    <title>gray.clhn.co — {{ page.title }}</title>
+    <title>gray.clhn.org — {{ page.title }}</title>
   </head>
   <body>
     <div class="wrapper">
