--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,10 @@ pre, blockquote {
   border-left:3px solid #aaaaaa;
 }
 
+li li {
+  padding-left: 1em;
+}
+
 section {
   padding-left: 1.5em;
   max-width: 75ex;
