--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,9 +10,10 @@
     <div class="wrapper">
       <section>
 	<h1>{{ page.title }}</h1>
-	{{ page.date | date_to_string }}
 	<hr>
 	{{ content }}
+
+	<p>{{ page.author }}, {{ page.date | date_to_string }}</p>
 	<hr>
 	<a href="/">Home</a>
       </section>
