Tweak signature on blog posts

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,7 +13,7 @@
 	<hr>
 	{{ content }}
 
-	<p>{{ page.author }}, {{ page.date | date_to_string }}</p>
+	<p align="right">— {{ page.author }}, {{ page.date | date_to_string }}</p>
 	<hr>
 	<a href="/">Home</a>
       </section>
