Initial attempt at rss feed

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.main }}/feed.xml" />
     <title>{{ page.title }}</title>
   </head>
   <body>
