--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.main }}/feed.xml" />
     <style>li {margin-left: 0em} li li {margin-left: 1em}</style>
     <title>{{ page.title }}</title>
   </head>
