Add MIT license to code in blog posts

--- a/_includes/cc.html
+++ b/_includes/cc.html
@@ -1,2 +1,7 @@
-<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />
-This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons Attribution-NoDerivatives 4.0 International License</a>.
+<p>Copyright (c) 2014 Gray Calhoun.  This document is licensed under
+a <a rel="license"
+href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons
+Attribution-NoDerivatives 4.0 International License</a> and any source
+code listed in this document is also licensed under
+the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT
+License</a>.</p>
