Update link to MIT license

--- a/_includes/cc.html
+++ b/_includes/cc.html
@@ -3,5 +3,4 @@ a <a rel="license"
 href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons
 Attribution-NoDerivatives 4.0 International License</a> and any source
 code listed in this document is also licensed under
-the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT
-License</a>.</p>
+the <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
