Remove site url from links

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.main }}/feed.xml" />
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml" />
     <title>{{ page.title }}</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
 
 	{% include cc.html %}
 
-	<p><a href="{{ site.url }}/">Home</a></p>
+	<p><a href="/">Home</a></p>
       </section>
     </div>
   </body>
