--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.main }}/feed.xml" />
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml" />
     <title>{{ page.title }}</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
 	<hr>
 	{{ content }}
 	<hr>
-	<a href="{{ site.url }}/">Home</a>
+	<a href="/">Home</a>
       </section>
     </div>
   </body>
