Update copyright date on webpage

--- a/_includes/cc.html
+++ b/_includes/cc.html
@@ -1,4 +1,4 @@
-<p>Copyright (c) 2014 Gray Calhoun.  This document is licensed under
+<p>Copyright (c) 2014–2015 Gray Calhoun.  This document is licensed under
 a <a rel="license"
 href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons
 Attribution-NoDerivatives 4.0 International License</a> and any source
