[#1] Add links to GitHub issues for commenting
This commit adds two links to each page, a "new comment" link that
opens a new issue on GitHub, and a "forum" link that takes people to
the GitHub issue tracker. We'll see if this is a smart approach to
commenting or not. (Probably not.)

Closes #1

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -19,7 +19,11 @@
 
 	{% include cc.html %}
 
-	<p><a href="/">Home</a></p>
+	<p>
+	  <a href="/">Home</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues/new">New comment</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues">Forum</a>
+	</p>
       </section>
     </div>
   </body>
