--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,7 +14,11 @@
 	<hr>
 	{{ content }}
 	<hr>
-	<a href="/">Home</a>
+	<p>
+	  <a href="/">Home</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues/new">New comment</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues">Forum</a>
+	</p>
       </section>
     </div>
   </body>
