--- a/_layouts/graph.html
+++ b/_layouts/graph.html
@@ -14,10 +14,13 @@
 	<p align="right">— {{ page.author }}{% if page.date %}, {{ page.date | date_to_string }}{% endif %}</p>
 
 	<hr />
-
 	{% include cc.html %}
 
-	<p><a href="/">Home</a></p>
+	<p>
+	  <a href="/">Home</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues/new">New comment</a> //
+	  <a href="https://github.com/grayclhn/grayclhn.github.io/issues">Forum</a>
+	</p>
       </section>
     </div>
   </body>
